# svs

./: .gitignore  .nojekyll  CNAME  README.md  SVS.ipynb  about.html  pyproject.toml  quickstart.html  robots.txt  search.json  sitemap.xml
.github/workflows/: docs-publish.yml
docs/: _quarto.yml  index.qmd  quickstart.ipynb
examples/: One Million Documents Benchmark.ipynb  graph.py  quickstart.py
examples/dad_jokes/: Build Dad Jokes KB.ipynb  Re-embed Dad Jokes with Ollama.ipynb
src/svs/: __init__.py  embeddings.py  kb.py  types.py  util.py
src/svs/embeddings/: __init__.py  mock.py  ollama.py  openai.py  util.py
tests/: test_embeddings.py  test_kb.py  test_util.py
